force-app/main/default/objects/T_Performance_Permission__mdt/T_Performance_Permission__mdt.object-meta.xml
<CustomObject>
    <label>T_Performance_Permission</label>
    <pluralLabel>T_Performance_Permissions</pluralLabel>
</CustomObject>