force-app/main/default/objects/T_Performance_Permission__mdt/fields/Group_of_Channel__c.field-meta.xml
<CustomField>
    <fullName>Group_of_Channel__c</fullName>
    <label>Group of Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>