force-app/main/default/objects/T_Performance_Permission__mdt/fields/isChannelDisable__c.field-meta.xml
<CustomField>
    <fullName>isChannelDisable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isChannelDisable</label>
    <type>Checkbox</type>
</CustomField>