force-app/main/default/objects/T_Performance_Permission__mdt/fields/isRegionDisable__c.field-meta.xml
<CustomField>
    <fullName>isRegionDisable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRegionDisable</label>
    <type>Checkbox</type>
</CustomField>