force-app/main/default/objects/T_Performance_Permission__mdt/fields/P2__c.field-meta.xml
<CustomField>
    <fullName>P2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P2</label>
    <type>Checkbox</type>
</CustomField>