force-app/main/default/objects/T_Performance_Permission__mdt/fields/P3__c.field-meta.xml
<CustomField>
    <fullName>P3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P3</label>
    <type>Checkbox</type>
</CustomField>