force-app/main/default/objects/T_Performance_Permission__mdt/fields/SF_Profile__c.field-meta.xml
<CustomField>
    <fullName>SF_Profile__c</fullName>
    <label>SF Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>