force-app/main/default/objects/T_Performance_Permission__mdt/fields/SF_Role__c.field-meta.xml
<CustomField>
    <fullName>SF_Role__c</fullName>
    <inlineHelpText>Mapping Value Logic: Start with &quot;SF Role Value&quot;</inlineHelpText>
    <label>SF Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>