force-app/main/default/objects/T_Performance_Permission__mdt/fields/Summary_Page__c.field-meta.xml
<CustomField>
    <fullName>Summary_Page__c</fullName>
    <label>Summary Page</label>
    <length>50</length>
    <type>Text</type>
</CustomField>