force-app/main/default/objects/T_Performance_Permission__mdt/fields/SummaryByTypeFieldMapping__c.field-meta.xml
<CustomField>
    <fullName>SummaryByTypeFieldMapping__c</fullName>
    <label>SummaryByTypeFieldMapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>