force-app/main/default/objects/T_Performance_Permission__mdt/listViews/ALLS.listView-meta.xml
<ListView>
    <fullName>ALLS</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SF_Profile__c</columns>
    <columns>SF_Role__c</columns>
    <columns>Summary_Page__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALLS</label>
    <language>en_US</language>
</ListView>