force-app/main/default/objects/T_Performance_Permission__mdt/listViews/For_All.listView-meta.xml
<ListView>
    <fullName>For_All</fullName>
    <columns>MasterLabel</columns>
    <columns>Channel__c</columns>
    <columns>Landing_Page__c</columns>
    <columns>P1__c</columns>
    <columns>P2__c</columns>
    <columns>P3__c</columns>
    <columns>P4__c</columns>
    <columns>SF_Profile__c</columns>
    <columns>SF_Role__c</columns>
    <columns>isChannelDisable__c</columns>
    <columns>isRegionDisable__c</columns>
    <columns>isZoneDisable__c</columns>
    <columns>Group_of_Channel__c</columns>
    <columns>Summary_Page__c</columns>
    <columns>SummaryByTypeFieldMapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>For All</label>
    <language>en_US</language>
</ListView>